--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Blake Ball - Front End Web Developer" />
+  <meta name="description" content="Personal portfolio site for Blake Ball" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
